# Windmapper

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.rst  cli_massSolver.cfg  conanfile.py  setup.py  wind_mapper_generic.py  windmapper.py
.travis/: deploy.sh  install.sh
docs/: build.rst  conf.py  configuration.rst  index.rst  install.rst  use.rst
examples/download_DEM/: param_download_DEM.py
examples/existing_DEM/: param_existing_DEM.py
